kubernetes/apps/dbms/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  annotations:
    # -- Gatus annotations
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 200"
spec:
  hostnames:
    - "emqx.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          port: 18083
